fix main view horizontal scroll thing

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 a,
